--- a/main.css
+++ b/main.css
@@ -9,21 +9,23 @@ body, html {
     color: white;
 }
 
-#bg-slider {
+#bg-video {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-    transition: background-image 1.5s ease-in-out;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
     z-index: 1;
+    transform: translateX(-50%) translateY(-50%);
+    object-fit: cover; 
+    transition: opacity 1s ease-in-out;
 }
 
 .overlay {
     position: relative;
-    z-index: 2;
+    z-index: 2; 
     width: 100%;
     height: 100%;
     background: linear-gradient(to bottom, 
